k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
      - name: frontend
        # The specific Git commit hash your CI pipeline built
        image: ghcr.io/marcelus85er/portfolio-ops/portfolio-frontend:1.0.0-beta.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: ghcr-login-secret
