k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: portfolio-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
